--- a/src/ProjetoMVC02.Presentation/Views/Shared/_Layout.cshtml
+++ b/src/ProjetoMVC02.Presentation/Views/Shared/_Layout.cshtml
@@ -3,6 +3,23 @@
     Layout = null;
 }
 
+@if (TempData["MensagemSucesso"] != null)
+{
+<div class="alert alert-success alert-dismissible fade show"
+role="alert"> <strong>Sucesso!</strong> @TempData["MensagemSucesso"]
+<button type="button" class="btn-close" data-bs-dismiss="alert"
+aria-label="Close"></button>
+</div>
+}
+
+@if (TempData["MensagemErro"] != null)
+{
+<div class="alert alert-danger alert-dismissible fade show" role="alert"> <strong>Erro!</strong> @TempData["MensagemErro"]
+<button type="button" class="btn-close" data-bs-dismiss="alert"
+aria-label="Close"></button>
+</div>
+}
+
 <!DOCTYPE html>
 
 <html>
